--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/1.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/1.md
@@ -1012,7 +1012,7 @@ __________
 करिष्यमाणस्याप्यबाववाददूषणस्य बुद्धिस्थत्वेन कृतप्रायत्वाद्दूषितेति भूतनिर्देशः ।
 इत्याहेति ।
 इत्याशयेनाहेत्यर्थः ।
-न चास्य "यस्मिन्नि"त्यादिश्लोकस्य श्रुतत्वेन "जगदु "रिति लिङ्बोध्यस्य पारोक्ष्यस्य समर्थनाय "न चास्माभिरभाववादिनां विकल्पाः श्रुताः" इति प्रागुक्तं कथं सङ्गच्छत इति वाच्यम् ।
+न चास्य "यस्मिन्नि"त्यादिश्लोकस्य श्रुतत्वेन "जगदु"रिति लिङ्बोध्यस्य पारोक्ष्यस्य समर्थनाय "न चास्माभिरभाववादिनां विकल्पाः श्रुताः" इति प्रागुक्तं कथं सङ्गच्छत इति वाच्यम् ।
 यथाश्रुतार्थकस्यास्य श्लोकस्य श्रुतत्वेऽपि पूर्वोपदर्शितानां बहूनामभाववादप्रकाराणां विशिष्याश्रुतत्वेन तद्वचनस्य तत्परत्वात् ।
 ग्रन्थकृदित्यादिना मत्सरं तदुक्तेर्हेतुत्वेन व्युत्पन्नै रचितं च नैव वचनैर्वक्रोक्तिशून्यं च यत् ।
 काव्यं तद्ध्वनिना समन्वितमिति प्रीत्या प्रशंसञ्जडो नो विद्मोऽभिदधाति किं सुमतिना पृष्टः स्वरूपं ध्वनेः  ॥
@@ -1038,7 +1038,7 @@ __________
  "यस्मिन्" काव्ये ।
  "सालङ्कृति" अत एव "मनःप्रह्लादि" ।
  "किञ्चन वस्तु" वर्ण्यमानः कश्चिदर्थोऽनास्ति" ।
- "व्युत्पन्नै "रिति ।
+ "व्युत्पन्नै"रिति ।
 नैवेति पाठे यदित्यास्यापकर्षः ।
 यन्नेति च पाठः ।
  "यत्" काव्यम् ।
@@ -1090,7 +1090,7 @@ __________
 सम्बन्धश्चावतारिकया दर्शितपूर्वः ।
 ज्ञापकान्तररञ्चाहौपेति ।
 अन्योन्यासम्बद्धत्वे सति उपसंहारभेदेन भाव्यमिति भावः ।
- "जगदुरित्याहु "रिति च प्रयुक्तं तद्भावमाहअभावेत्यादि ।
+ "जगदुरित्याहु"रिति च प्रयुक्तं तद्भावमाहअभावेत्यादि ।
 उक्तमिति ।
 जगदुरित्यनेनेति शेषः ।
 पुस्तकेषु अलङ्कारग्रन्थेषु ।
@@ -1271,7 +1271,7 @@ __________
 वामनोऽपीति बभाषे इत्यानुषङ्गः ।
 सादृश्यादिति ।
 वक्रोक्तिः तन्नामालङ्कारः ।
-तथा चा "भिधानम्" इति वचनेन भामहोऽगुणवृत्ति "रिति वचनेन भट्टोट्भटोऽलक्षणे"ति वचनेन वामनश्च काव्येषु गुणवृत्या व्यवहारं दर्शितवन्त इति फलितार्थः ।
+तथा चा "भिधानम्" इति वचनेन भामहोऽगुणवृत्ति"रिति वचनेन भट्टोट्भटोऽलक्षणे"ति वचनेन वामनश्च काव्येषु गुणवृत्या व्यवहारं दर्शितवन्त इति फलितार्थः ।
  "ध्वनिमार्गो मनाक्स्पृष्टोऽपि न लक्षितः "इत्यमुं भागं पूर्वंपक्षोपक्षेपानुगुण्येन व्याचष्टेतैस्तावदित्यादि ।
 सम्प्रतिपत्तौ तावच्छब्दः ।
  "ध्वनिमार्गो मनाक्स्पृष्ट" इत्यस्य विवरणंध्वनिदिगुन्मीलितेति ।
@@ -1531,7 +1531,7 @@ __________
 रसचर्वणात्मनः प्राधान्यं दर्सयन् रसध्वनेरेव सर्वत्र मुख्यभूतमात्मत्वमिति दर्शयति ।
 तेन यदुक्तं धनिर्नामापरो योऽपि व्यापारो व्यञ्जनात्मकः ।
 तस्य सिद्धेऽपि भेदे स्यात्कर्व्येऽशतेवं न रूपता   ॥
-इत्.इ पदपहस्तितं भवति ।
+इति पदपहस्तितं भवति ।
 तथा ह्यभिधाभावनारसचर्वणात्मकेऽपि त्र्यंशे काव्ये रसचर्वणा तावज्जीवितभूतेति भवतोऽप्यविवादोऽस्ति ।
 यथोक्तं त्वयैव काव्ये रसयिता सर्वो न बोद्धा न नियोगभाक्त् ।
 इति  ।
@@ -1593,7 +1593,7 @@ __________
 यदाह "कीर्ति स्वर्गफलामाहुः" इत्यादि ।
 श्रोतॄणां च व्युत्पत्तिप्रीती यद्यपि स्तः,यथोक्तं धर्मार्थकाममोक्षेषु वैचक्षण्यं कलासु च ।
 करोति कीर्ति प्रीतिं च साधुकाव्यनिषेवणम्   ॥
-इत्.इ ॥
+इति ॥
 तथापि तत्र प्रीतिरेव प्रधानम् ।
 अन्यथा प्रभुसंमितेभ्यो वेदादिभ्यो मित्त्रसंमितेभ्यश्चेतिहासादिभ्यो व्युत्पत्तिहेतुभ्य कोऽस्य काव्यरूपस्य व्युत्पत्तिहेतोर्जायासंमितित्वलक्षणो
 
@@ -1640,7 +1640,7 @@ __________
 तेन स आनन्दवर्धनाचार्य एतच्छास्त्रद्वारेम सहृदयहृदयेषु प्रतिष्टां देवतायतनादिवदनश्वरीं स्थितिं गच्छत्विति भावः ।
 यथोक्तमुपेयुषामपि दिवं सन्निबन्धविधायिनाम ।
 आस्त एव निरातङ्कं कान्तं काव्यमयं वपुः   ॥
-इत्.इ ॥
+इति ॥
 यथा मनसि प्रतिष्टा एवंविधमस्य मनः, सहृदयचक्रवर्ती खत्वयं ग्रन्थकृदिति यावत् ।
 यथा "युद्धे प्रतिष्टा परमार्जुनस्य" इति ।
 स्वनामप्रकजीकरणं श्रोतॄणां प्रवृत्त्यङ्गमेव
@@ -2011,7 +2011,7 @@ __________
 अपिशब्देनैकस्यैव बहुधा व्याकरणे विरोधं दर्शयतान्येषामपारं मौर्ख्यं द्योत्यते ।
 प्रसिद्धपदं व्याचष्टेवनितेत्यादि ।
 विदितः ।
- "काव्यलक्ष्मविधायिभि "रित्यस्य कारिकाचतुर्तपादत्वशङ्कां परिहर्तुमाहअन्यैरित्यादि ।
+ "काव्यलक्ष्मविधायिभि"रित्यस्य कारिकाचतुर्तपादत्वशङ्कां परिहर्तुमाहअन्यैरित्यादि ।
 इति विशेषप्रतिषेधेनेत्यादि ।
 अज्ञातज्ञापनलक्षणं प्रतिपादनं हि प्रतननं, तस्य विशेषरूपस्य प्रतिषेधेन तत्प्रतिद्वन्द्वितया परिशिष्टमनुवदनं गम्यत इति भावः  ॥ ३ ॥
 
@@ -2487,7 +2487,7 @@ __________
 प्रतिपन्नत्वादिति ।
 ज्ञातत्वादित्यर्थः ।
 उक्तमुपपादयतिन हीत्यादि ।
- "इत्यन्वयस्य न हि काचित्क्षति "रिति सम्बन्धः ।
+ "इत्यन्वयस्य न हि काचित्क्षति"रिति सम्बन्धः ।
 गङ्गायामितायदि वैधर्म्येणोदाहरणम् ।
 अन्वय इति वाच्यवर्मिणोरन्वय इत्यर्थः ।
 बुभूषन्नेव भवितुमारब्धवानेव ।
@@ -2708,7 +2708,7 @@ __________
 व्यापारो ध्वननद्योतनव्यञ्जनप्रत्यायनावगमनादिसोदरव्यपदेसनिरूपितोऽभ्युपगन्तव्यः ।
 यद्वक्ष्यति "मुख्यां वृत्तिं परित्यज्य गुणवृत्त्यार्थदर्शनम् ।
 यदुद्दिस्य फलं तत्र शब्दो नैव स्खलद्गतिः   ॥
-इत्.इ ॥
+इति ॥
 तेन समयापेक्षा वाच्यावगमनशक्तिरिभिधाशक्तिः ।
 तदन्यथानुपपत्तिसहायार्थावबोधनशक्तिस्तात्पर्यशक्तिः ।
 मुख्यार्थबाधादिसहकार्यपेक्षार्थप्रतिभासनशक्तिर्लक्षणाशक्तिः ।
@@ -2888,7 +2888,7 @@ __________
 तदिदं वयमपि न नाङ्गीकुर्मः ।
 यद्वक्ष्यामः तद्वत्सचेतसां सोऽर्थो वाक्यार्थविमुखात्मनाम् ।
 बुद्धौ तत्त्वावभासिन्यां झटित्येवावभासते   ॥
-इत्.इ ॥
+इति ॥
 किं तु सातिसयानुशीलनाभ्यासात्तत्र सम्भाव्यमानी "पि क्रमः सजातीयतद्विकल्पपरम्परानुदयादभ्यस्तविषयव्याप्तिसमयस्मृतिक्रमवन्न संवेद्यत इति ।
 
 
@@ -3848,7 +3848,7 @@ __________
 
 प्रतिपन्नः करुणरसरूपतां लौकिकशोकव्यतिरिक्तां स्वचित्तद्गुतिसमास्वाद्यसारां प्रतिपन्नो रसपरिपूर्णकुम्भोच्चलनवच्चित्तवृत्तिनिःष्यन्दस्वभाववाग्विलापादिवच्य समयानपेक्षत्वेऽपि चित्तवृत्तिव्यञ्जकत्वादिति नयेनाकृतकतयैवावेशवशात्समुचितशब्दच्छन्दोवृत्तादिनियन्त्रितश्लोकरूपतां प्राप्तः मा निषाद प्रतिष्टां त्वंमगमः शाश्वतीः समाः ।
 यत्क्रौञ्चमिथुनादेकमवधीः काममोहितम्   ॥
-इत्.इ ॥
+इति ॥
 न तु मुनेः शोक इति मन्तव्यम् ।
 एवं हि सति तद्दुःखेन सोऽपि दुःखित इति कृत्वा रसस्यात्मतेति निरवकाशं भवेत् ।
 न च दुःखसन्तप्तस्यैषा दशेति ।
@@ -4253,7 +4253,7 @@ __________
 अत्र नादापरपर्यायश्रुतिविभागविषये बहवः प्रकारा वर्त्तन्तेकेचन द्वाविंशतिं श्रुतीर्मन्यन्ते, अपरे च षट्षष्टिभेदभिन्नाः श्रुतय इत्याचक्षते, अन्ये पुनरानन्तयं कथयन्ति श्रुतीनाम् ।
 अत एवोक्तं कोहलेन द्वाविंशतिं केचिदुदाहरन्ति श्रुतीः श्रुतिज्ञानविचारदक्षाः ।
 षट्षष्टिभिन्नाः खलु केचिदासामानन्त्यमेव प्रतिपादयन्ति   ॥
-इत्.इ ॥
+इति ॥
 तत्र द्वाविंशतिपक्ष एव प्रकृते ग्रन्थकाराभिमतः ।
 एतासां श्रुतीनां मिथो भेदःविणादण्डे पूर्वोत्तरबावेन द्वाविंशतिं तन्त्रीः परिकल्प्य प्रथमापेक्षया द्वितीयादितन्त्रीषु किञ्चित्किञ्चिद्द्दढीकरणपूर्वकं वाद्यमानासु तासु प्रत्यक्षतोऽवगन्तुं शक्यः ।
 आभ्यश्च श्रुतिभ्यः षङ्जर्षभगान्धारमद्यमपञ्चमधैवतनिषादाख्याः सप्त स्वरा भवन्ति ।
@@ -4361,7 +4361,7 @@ __________
 
 यथोक्तमस्मत्परमगुरुभिः श्रीमदुत्पलपादैः तैस्तैरप्युपयाचितैरुपनतस्तन्व्याः स्थितोऽप्यन्तिके कान्तो लोकसमान एवमपरिज्ञातो न रन्तुं यथा ।
 लोकस्यैष तथानवेक्षितगुणः स्वात्मापि विश्वेश्वरो नैवालं निजवैभवाय तदियं तत्प्रत्यभिज्ञोदिता   ः
-इत्.इ ॥
+इति ॥
 तेन ज्ञातस्यापि विशेषतो निरूपणमनुसन्धानात्मकमत्र प्रत्यभिज्ञानं, न तु तदेवदमित्येतावन्मात्रम् ।
 महाकवेरिति ।
 यो महाकविरहं भूयासमित्याशास्ते ।
@@ -5486,20 +5486,20 @@ __________
 लोचनं
 
 स प्रियासङ्गमोत्कण्ठां सासह्यां मनसः शुचम्   ॥
-इत्.इ  ।
+इति  ।
 अत्राप्युत्तरोत्तरजन्यत्व "प्युपमानोपमेयभावस्य सुकल्पत्वात् ।
 न हि क्रमिकाणां नोपमानोपमेयभावः ।
 तथा हि राम इव दशरथोऽभूद्दशरथ इव रधुरजोऽपि रधुसद्दशः ।
 अज इव दिलीपवंशश्चित्रं रामस्य कीर्तिरियम्   ॥
-इत्.इ न न भवति ।
+इति न न भवति ।
 तस्मात्क्रमिकत्वं समं वा प्राकरणिकत्वमुपमां निरुंणद्धीति कोऽयं त्रास इत्लं गर्दभीदोहानुवर्तनेन ।
 सङ्करालङ्गारेऽपीति ।
 विरुद्धालङ्क्रियोल्लेखे समं तद्वृत्यसम्भवे ।
 एकस्य च ग्रहे न्यायदोषाभावे च सङ्करः   ॥
-इत्.इ लक्षणादेकः प्रकारः ।
+इति लक्षणादेकः प्रकारः ।
 यथा ममैव शशिवदनासितसरसिजनयना सितकुन्ददशनपङ्क्तिरियम् ।
 गगनजलस्थलसम्भवहृद्याकारा कृता विधिना   ॥
-इत्.इ  ।
+इति  ।
 अत्र शशी वदनमस्याः तद्वद्वा वदनमस्या इति रूपकोपमोल्लेखाद्युगपद्द्वयासम्भवादेकतरपक्षत्यागग्रहणे प्रमाणाभावात्सङ्कर इति व्यङ्ग्यवाच्यताया एवनिश्चयात्का ध्वनिसम्भावना ।
 योऽपि द्वितीयः प्रकारःशब्दार्थालङ्कारामामेकत्रभाव इति तत्रापि प्रतीयमानस्य का शङ्का ।
 यथास्मर स्मरमिव प्रियं रमयसे यमालिङ्गनातिति ।
@@ -5534,13 +5534,13 @@ __________
 तृतीयः प्रकारः यत्रैकत्र वाक्यांशेऽनेकोऽर्थालङ्कारस्तत्रापि द्वयोः साम्यात्कस्य व्यङ्ग्यता ।
 यथा तुल्योदयावसानत्वाद्गतेऽस्तं प्रति भास्वति ।
 वासाय वासरः क्लान्तो विशतीव तमोगुहाम्   ॥
-इत्.इ  ।
+इति  ।
 अत्र हि स्वामिविपत्तिसमुचितव्रतग्रहणहेवाकिकुलपुत्रकरूपणमेकदेशविवर्त्तिरूपकं दर्शयति ।
 उत्प्रेक्षा चेवशब्देनोक्ता ।
 तदिदं प्रकारद्वयमुक्तम् ।
 शब्दार्थवर्त्त्यलङ्कारा वाक्य एकत्र वर्त्तिनः ।
 सङ्गरश्चैकवाक्यांशप्रवेशाद्वाभिधीयते   ॥
-इत्.इ च  ।
+इति च  ।
 चतुर्थस्तु प्रकारः यत्रानुग्रह्यानुग्राहकभावोऽलङ्काराणाम् ।
 यथा प्रवातनीलोत्पलनिर्विशेषमधीरविप्रेक्षितमायताक्ष्या ।
 तया गृहीतं नु मृगाङ्गनाभ्यस्ततो गहीतं नु मृगाङ्गनाभिः ॥
@@ -5583,7 +5583,7 @@ __________
 ननु यत्र व्यङ्ग्यमेव प्राधान्येन भाति तत्र किं कर्तव्यम् ।
 यथा हीइ ण गुणाणुराओ खलाणं णवरं पसिद्धिसरणाणम् ।
 किर पहिणुसै ससिमणं चन्दे पिआमुहे दिट्ठे   ॥
-अत्रार्थान्तरन्यासस्तावद्वाच्यत्वेनाभात्.इ, व्यतिरेकापह्नुती तु व्यङ्ग्यत्वेन प्रधानतयेत्यभिप्रायेणाशङ्कतेअथेति ।
+अत्रार्थान्तरन्यासस्तावद्वाच्यत्वेनाभाति, व्यतिरेकापह्नुती तु व्यङ्ग्यत्वेन प्रधानतयेत्यभिप्रायेणाशङ्कतेअथेति ।
 तत्रोत्तरम्तदा सोऽपीति ।
 सङ्करालङ्कार
 
@@ -6033,7 +6033,7 @@ __________
 तेषां घण्टानुरणनरूपत्वं तावदस्ति - ते च ध्वनिशब्देनोक्ताः ।
 यथाह भगवान् भर्तृहरिः यः संयोगवियोगाभ्यां करणैरुपजन्यते ।
 स स्फोटः शब्दजाश्शब्दा ध्वनयोऽन्यैरुदाहृताः   ॥
-इत्.इ  ।
+इति  ।
 एवं घण्टादिनिर्ह्लादस्थानीयोऽनुरणनात्मोपलक्षितो व्यङ्ग्योऽप्यर्थो ध्वनिरिति व्यवहृतः ।
 तथा श्रूयमाणा ये वर्णा नादशब्दवाच्या अन्त्यबुद्धिनिर्ग्राह्यस्फोटाभिव्यञ्जकास्ते ध्वनिशब्देनोक्ताः ।
 यथाह भगवान् स एव प्रत्ययैरनुपाख्येयैर्ग्रहणानुगुणैस्तथा ।
@@ -6082,16 +6082,16 @@ __________
 लोचनं
 
 ध्वनिप्रकाशिते शब्दे स्वरूपमवधार्यते   ॥
-इत्.इ  ।
+इति  ।
 तेन व्यञ्जकौ शब्दार्थावपीह ध्वनिशब्देनोक्तौ ।
 किञ्ज वर्णेषु तावन्मात्रपरिमाणेवपि सत्सु ।
 यथोक्तमल्पीयसापि यत्नेन शब्दमुच्चारितं मतिः ।
 यदि वा नैव गृह्णाति वर्णं वा सकलं स्फुटम्   ॥
-इत्.इ  ।
+इति  ।
 तेषु तावत्स्वेव श्रूयमाणेषु वक्तुर्योऽन्यो द्रुताविलम्बितादिवृत्तिभेदात्मा प्रसिद्दादुच्चारणव्यापारादभ्यधिकः स ध्वनिरुक्तः ।
 यदाह स एव शब्दस्योर्ध्वमभिव्यक्तेर्वृत्तिभेदे तु वैकृताः ।
 ध्वनयः समुपोहन्ते स्फोटात्मा तैर्न भिद्यते   ॥
-इत्.इ  ।
+इति  ।
 असमाभिरपि प्रसिद्धेभ्यः शब्दव्यापारेभ्योऽभिधातात्पर्यलक्षणारूपेभ्योऽतिरिक्तो व्यापारो ध्वनिरित्युक्तः ।
 एवं चतुष्कमपि ध्वनिः ।
 तद्योगाच्च समस्तमपि काव्यं
@@ -6726,7 +6726,7 @@ __________
 काञ्चिल्लक्षणाः ।
 सामर्थ्यत्नियमेन प्रयोगसामर्थ्यातभिधानवद्भवन्ति ।
  "प्रयुक्ता" इत्यादिकारिकांशमनुषङ्गेण व्याचष्टेते तस्मिन्नित्यादि ।
- "तेषु चोपचरितशब्दवृत्ति "रिति ग्रन्थं व्याचष्टेउपचरितेत्याद ।
+ "तेषु चोपचरितशब्दवृत्ति"रिति ग्रन्थं व्याचष्टेउपचरितेत्याद ।
  "लावण्याद्या" इत्यत्रादिपदार्थमाहआदीत्यादि ।
 अन्य इति ।
 अनुरोधी विरोधी तुल्य इति लोकप्रसिद्धोऽर्थ इत्यर्थः ।
@@ -6821,7 +6821,7 @@ __________
 असाविति ।
 द्वितीयो व्यापार इत्यर्थः ।
  "नच लक्षणैवे"त्यत्र हेतुत्वेन कारिकान्त्यपादं पात यतियत इति ।
-तथा च "नैव स्खलद्गति "रित्यनेन लक्षणाया अभावः प्रतिपाद्यत इति भावः ।
+तथा च "नैव स्खलद्गति"रित्यनेन लक्षणाया अभावः प्रतिपाद्यत इति भावः ।
 बाधकेति ।
 बाधकप्रमाणव्यापारेणेत्यर्थः ।
 विधुरीक्रियमाणा कुण्ठीक्रियमाणा ।
@@ -6852,7 +6852,7 @@ __________
 किन्त्वन्य एव तद्विषय इति भावः ।
 यथा"आ हन्त किमिदं तन्वि नेत्रयोः श्रावणस्तव ।
 शरत्कपोले ग्रीष्मोऽङ्गे शिशिरो मुखपङ्कजे"   ॥
-इत्.इ  ।
+इति  ।
 अत्र श्रावणादिपदेन वर्षर्त्वादिकं लक्ष्यते, तेनाश्रुपातादिकञ्ज ।
 अतो लक्षितलक्षणाप्रयोजनमत्रोत्कण्ठातिशयः ।
 तत्र श्रवमादिपदेनाश्रुपातादिरेव लक्ष्यत इत्यतो लक्षितलक्षणाया अभावादयन्न तद्विषय इत्यर्थ इति केचित् ।
@@ -6999,7 +6999,7 @@ __________
 भक्तिर्न्नास्तीत्यर्थः ।
 तथा चाव्याप्तिरिति भावः ।
 अथ गौणस्थलेऽपि लक्षणायाः प्रसरद्विवक्षितान्यपरवाच्योदाहरणत्वेन प्रदर्शितेऽशिखरिणी"त्यादौ सा प्रवर्तत एवेति तत्र तदभावाभिधानमसङ्गतमिति पूर्वपक्षमभ्युपेत्य तदनुरोधेनापि विवक्षितान्यपरवाच्येत्यादिग्रन्थं व्याख्यास्यन् शिष्यव्युत्पादनार्थं तत्पूर्वपक्षमुपक्षिपतिनन्वित्यादि ।
-गौणमपि "सिंहो वटु "रित्यादिस्थलमपि ।
+गौणमपि "सिंहो वटु"रित्यादिस्थलमपि ।
 व्याप्नोतीति ।
 लक्षणासामग्रीसत्वादिति भावः ।
 नन्वेवं गौणस्य लाक्षणिकाद्भेदः कुत इत्यत आह "केवलम्" इत्यादिना "भेद" इत्यन्तेन ।
@@ -7051,7 +7051,7 @@ __________
 सैव लक्षणैव ।
 "अभिधेयेन संयोगात्सामीप्यात्समवायतः ।
 वैपरीत्यात्क्रियायोगाल्लक्षणा पञ्चधा स्मुता"  ॥
-इत्.इ वचनं खण्डश उपादाय व्याचष्टेअभिधेयेनेत्यादि ।
+इति वचनं खण्डश उपादाय व्याचष्टेअभिधेयेनेत्यादि ।
 अत्र संयोगपदेन वाच्यवाचकभावरूपस्सम्बन्धः, समवायपदेन तदितर आधाराधेयभावरूपस्सारूप्यादिश्च विवक्षितः ।
 "अभिधेयेन सामीप्यात्सारूप्यादि"ति चात्र पाठोऽस्ति ।
 स एव भाक्तमाहुरित्यत्र पूर्वं प्रदर्शितः ।
@@ -7345,7 +7345,7 @@ __________
 कृतप्रतीतिकस्य अनुपयोगित्वे युक्तिप्रदर्शक उपेत्यादिन्यायः ।
 "उपादायापि ये हेयास्तानुपायान् प्रचक्षते ।
 उपायानां हि नियमो नावश्यमवतिष्टते  ॥
-इत्.इ न्यायेनेत्यर्थः ।
+इति न्यायेनेत्यर्थः ।
 सोऽयं न्यायोऽत्र न प्रवर्तत इति भावः ।
 फलितमाहैतीत्यादि ।
 व्यङ्ग्यस्य यदलक्ष्यक्रमत्वमुक्तं तदप्युक्तार्थे गमकमित्याहअत एवेति ।
@@ -7580,7 +7580,7 @@ __________
 गुणीभूतव्यङ्ग्यचित्रातिशायीत्यर्थः ।
  "स्वरूपम्" इति ।
 सारतारूपं स्वरूपमित्यर्थः ।
- "तै "रिति ।
+ "तै"रिति ।
 पूर्वपक्षिभिरित्यर्थः ।
  "तदि"ति ।
 तर्हित्यर्थः ।
