--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/1.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/1.md
@@ -3894,7 +3894,7 @@ __________
 स एवेत्यावकारेणेदमाहनान्य आत्मेति ।
 तेन यदाह भट्टनायकः शब्दप्राधान्यमाश्रित्य तत्र शास्त्रं पृथग्विदुः  ।
 अर्थतत्त्वेन युक्तं तु वदन्त्याख्यानमेतयोः   ॥
-द्वयोर्गुणत्व्.ए व्यापारप्राधान्ये काव्यधीर्भवेत् ॥
+द्वयोर्गुणत्वे व्यापारप्राधान्ये काव्यधीर्भवेत् ॥
 इति तदपास्तम् ।
 व्यापारो हि यदि ध्वननात्मा रसनास्वभावस्तन्नापूर्वमुक्तम् ।
 अथाभिधैव व्यापारस्तथाप्यस्याः प्रधान्यं नेत्यावेदितं प्राक् ।
@@ -5662,7 +5662,7 @@ __________
 प्रकारः ।
 यथा एतत्तस्य मुखात्कियत्तकमलिनीपत्त्रे कणं पार्थसो यन्मुक्तामणिरित्यमंस्त स जडः शृण्वन्यदस्मादपि ।
 अङ्गुल्यग्रलघुक्रियाप्रविलयिन्यादीयमाने शनै. स्तत्रोङ्डीय गतो हहेत्यनुदिनं निद्राति नान्तः शुचा  ॥
-अत्रास्थान्.ए महत्त्वसम्भवनं सामान्यं प्रस्तुतम्, प्रस्तुतं तु जलबिन्दौ मणित्वसम्भावनं विशेषरूपं वाच्यम् ।
+अत्रास्थाने महत्त्वसम्भवनं सामान्यं प्रस्तुतम्, प्रस्तुतं तु जलबिन्दौ मणित्वसम्भावनं विशेषरूपं वाच्यम् ।
 तत्र्रापि सामान्यविशेषयोर्युगपत्प्राधान्ये न विरोध इत्युक्तम् ।
 एवमेकः प्रकारो द्विभेदोऽपि विचारितः, यदा तावदित्यादिना विशेषस्यापि प्राधान्यमित्यन्तेन ।
 एतमेव न्यायं निमित्तनैमित्तिकभावे"तिदिशंस्तस्यापि द्विप्रकारतां
@@ -6589,7 +6589,7 @@ __________
 उचितेति ।
 तथा    परार्थे यः पीडाभनुभवति भङ्गेऽपि मधुरो यदीयः सर्वोषामिह खलु विकारोऽप्यभिमतः ।
 न सम्प्राप्तो वृद्धिं यदि स भृशमक्षेत्रपतितः किमिक्षोर्देषोऽसौ न पुनरगुणाया मरुभुवः  ॥
-इत्यत्रेक्षुपक्ष्.ए "नुभवतिशब्दः ।
+इत्यत्रेक्षुपक्षे "नुभवतिशब्दः ।
 न चैवंविधः कदाचिदपि ध्वनेर्विषयः ।
 
 
