--- a/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/3.md
+++ b/laxaNam/granthaH/dhvanyAlokaH/sarva-prastutiH/3.md
@@ -540,7 +540,7 @@ __________
 काव्यप्रकाशेऽप्युदाहृतोऽयं श्लोकः ।
 स्वतःसम्भविशरीरार्थशक्त्युद्भवे प्रभेदे पदप्रकाशता यथा
 वाणिअअ हत्तिदन्ता कुत्तो अह्याण बाधकित्ती अ ।
-जाव लुलिआलपअमुही धरम्मि परिसक्कए सुह्णा ॥
+जाव लुलिआलपअमुही धरम्मि परिसके सुह्णा ॥
 अत्र लुलितालकमुखीत्येतत्पदं व्याधवध्वाः स्वतःसम्भावितशरीरार्थशक्त्या सुरतक्रीडासक्तिं सूचयंस्तदीयस्य भर्तुः सततसम्भोगक्षामतां प्रकाशयति ।
 लोचनमित्यत्र कविना यो विरागी वक्ता निबद्धस्तत्प्रौढोक्त्या जीवितशब्दोऽर्थशक्तिमूलतयेदं ध्वनयतिसर्व एवामी कामा विभूतयश्च स्वजीवितमात्रोपयोगिनः, तदभावे हि सद्भिरपि तैरसद्रूपताप्यते, तदेव च जीवितं प्राणधारणरूपत्वात्प्राणवृत्तेश्च चाञ्चल्यादनास्थापदमिति विषयेषु वराकेषु किं दोषोद्धोषणदौर्जन्येन निजमेव जीवितमुपालभ्यम्, तदपि च निसर्गचञ्चलमिति न सापराधमित्येतावता गाढं वैराग्यमिति ।
 वाक्यप्रकाशता यथा "शिखरिणि" इत्यादौ ।
@@ -9637,7 +9637,7 @@ __________
 साकाङ्क्षेत्यादि ।
 साकाङ्क्षा दीप्ता गद्गदेन ताराप्रशमनोद्दीपनाभ्यां चित्रिता विशेषवती चेत्यर्थः ।
 यथा वा
-आम असैओ ओरम पैव्वए ण तुएं मलिणिअं सीलम् ।
+आम असैओ ओरम पैवे ण तुएं मलिणिअं सीलम् ।
 किं उण जणस्स जाअ व्व चान्दिलं तं ण कामेमो ॥
 शब्दशक्तिरेव हि स्वाभिधेयसामर्थ्याक्षिप्तकाकुसहाया सत्यर्थविशेषप्रतिपत्तिहेतुर्न काकुमात्रम्. विषयान्तरे स्वेच्छाकृतात्काकुमात्रात्तथाविधार्थप्रतिपत्त्यसम्भवात् ।
 स चार्थः काकुविशेषसहायशब्दव्यापारोपारूढोऽप्यर्थसामर्थ्यलभ्य इति व्यङ्ग्यरूप एव ।
