--- a/laxaNam/sadAsvAdaH/2014-12-06__72_-_K._S._Arjunwadkars_kaNTakAnjali.md
+++ b/laxaNam/sadAsvAdaH/2014-12-06__72_-_K._S._Arjunwadkars_kaNTakAnjali.md
@@ -19,7 +19,7 @@ title = "2014-12-06__72 - K. S. Arjunwadkar's Kaṇṭakāñjali"
   
   
 
-MEANING
+## Meaning
 
   
 
@@ -27,7 +27,7 @@ MEANING
 
   
 
-CONTEXT
+## Context
 
   
 
@@ -287,7 +287,7 @@ One could be given a private beach in Monaco with a ready supply of the finest m
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
