--- a/laxaNam/sadAsvAdaH/2016-02-28__79_-_One_verse.md
+++ b/laxaNam/sadAsvAdaH/2016-02-28__79_-_One_verse.md
@@ -19,7 +19,7 @@ title = "2016-02-28__79 - One verse"
   
   
 
-MEANING
+## Meaning
 
   
 
@@ -27,7 +27,7 @@ MEANING
 
   
 
-CONTEXT
+## Context
 
   
 
@@ -100,7 +100,7 @@ All that is for the experts to debate. As for us, only one truth seems evident: 
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
