--- a/laxaNam/sadAsvAdaH/2016-04-10__81_-_The_upamA.md
+++ b/laxaNam/sadAsvAdaH/2016-04-10__81_-_The_upamA.md
@@ -19,7 +19,7 @@ title = "2016-04-10__81 - The upamā"
   
   
 
-MEANING
+## Meaning
 
   
 
@@ -27,7 +27,7 @@ MEANING
 
   
 
-CONTEXT
+## Context
 
   
 
@@ -85,7 +85,7 @@ This chapter’s half-verse sets all such niggling doubts aside. It doesn’t ma
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
