--- a/laxaNam/sadAsvAdaH/2016-07-02__romanthaH_-_22.md
+++ b/laxaNam/sadAsvAdaH/2016-07-02__romanthaH_-_22.md
@@ -336,7 +336,7 @@ As always, we welcome any thoughts, feedback and suggestions from you all. Pleas
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
