--- a/laxaNam/sadAsvAdaH/2017-01-09__92_-_H._R._Bacchans_madhushAlA.md
+++ b/laxaNam/sadAsvAdaH/2017-01-09__92_-_H._R._Bacchans_madhushAlA.md
@@ -26,7 +26,7 @@ To catch the rhythm, we can ignore the Hindi pronunciation for a moment, and ass
 
   
 
-CONTEXT
+## Context
 
   
 
@@ -306,7 +306,7 @@ Another highly admired trait of popular poems of the time appears to have been a
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
