--- a/laxaNam/sadAsvAdaH/2014-10-27__romanthaH_-_18.md
+++ b/laxaNam/sadAsvAdaH/2014-10-27__romanthaH_-_18.md
@@ -92,7 +92,7 @@ As always, we welcome any thoughts, feedback and suggestions from you all. Pleas
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
