--- a/laxaNam/sadAsvAdaH/2016-10-29__romanthaH_-_23.md
+++ b/laxaNam/sadAsvAdaH/2016-10-29__romanthaH_-_23.md
@@ -262,7 +262,7 @@ As always, we welcome any thoughts, feedback and suggestions from you all. Pleas
 
   
 
-A PARTING THOUGHT
+## Parting Thought
 
   
 
