--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md
@@ -2,4 +2,11 @@
 title = "52"
 
 +++
-आतपात्ययेति॥ आतपस्यात्ययेऽपगमे सति संक्षिप्ता राशीकृता नीवारास्तृणधान्यानि यासु तासु। 'नीवारास्तृणधान्यानि' इत्यमरः। उटजानां पर्णशालानामङ्गनभूमिषु चत्वरस्थानेषु। 'पर्णशालोटजोऽस्त्रियाम्' इति। 'अङ्गनं चत्वराजिरे' इति चामरः। निषादिभिरुपविष्टैर्मृगैर्वर्तितो निष्पादितो रोमन्थश्चर्वितचर्वणं यस्मिन्नाश्रमे तम् ॥ 52 ॥
+आतपात्ययेति॥  
+आतपस्यात्यये ऽपगमे सति  
+**संक्षिप्ता** राशीकृता  
+**नीवारास्** तृणधान्यानि यासु तासु। 'नीवारास्तृणधान्यानि' इत्यमरः। 
+
+**उटजानां** पर्णशालानाम् **अङ्गनभूमिषु** चत्वरस्थानेषु। 'पर्णशालोटजोऽस्त्रियाम्' इति। 'अङ्गनं चत्वराजिरे' इति चामरः। 
+
+**निषादिभिर्** उपविष्टैर् **मृगैर् वर्तितो** निष्पादितो **रोमन्थश्** चर्वितचर्वणं यस्मिन्न् आश्रमे तम् ॥ 52 ॥
