--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md
@@ -2,4 +2,10 @@
 title = "59"
 
 +++
-अथेति॥ अथ प्रश्नानन्तरं विजितारिपुरो विजितशत्रुनगरो वदतां वक्तॄणां वरः श्रेष्ठः। 'यतश्चनिर्धारणम्'(पा.2।3।41) इति षष्टी। अर्थपती राजाथर्वणोऽथर्ववेदस्य निधेस्तस्य मुनेः पुरोऽग्रेऽर्थ्यामर्थामर्थादनपेताम्। 'धर्मपथ्यर्थन्यायादनपेते'(पा.4।4।92) इति यप्रत्ययः। वाचमादहे वक्तुमुपक्रान्तवानित्यर्थथः। 'अथर्वनिधेः' इत्यनेन पुरोहितकृत्याभिज्ञत्वात्तत्कर्मनिर्वाहकत्वं मुनेरस्तीति सूच्यते। यथाह कामन्दकः-'त्रय्यां च दण्डनीत्यां च कुशलः स्यात्पुरोहितः । अथर्वविहितं कुर्यान्नित्यं शान्तिकपौष्टिकम् ॥ ' इति ॥ 59 ॥
+अथेति॥  
+**अथ** प्रश्नानन्तरं **विजितारिपुरो** विजितशत्रुनगरो वदतां वक्तॄणां वरः श्रेष्ठः। 'यतश्चनिर्धारणम्'(पा.2।3।41) इति षष्टी।  
+**अर्थपती** राजा **ऽथर्वणो** ऽथर्ववेदस्य निधेस् **तस्य** मुनेः **पुरो** ऽग्रे  
+**ऽर्थ्याम्** अर्थाद् अनपेताम्। 'धर्मपथ्यर्थन्यायादनपेते'(पा.4।4।92) इति यप्रत्ययः।  
+**वाचम् आददे** वक्तुम् उपक्रान्तवान् इत्यर्थथः। 
+
+'अथर्वनिधेः' इत्यनेन पुरोहितकृत्याभिज्ञत्वात्तत्कर्मनिर्वाहकत्वं मुनेरस्तीति सूच्यते। यथाह कामन्दकः-'त्रय्यां च दण्डनीत्यां च कुशलः स्यात्पुरोहितः । अथर्वविहितं कुर्यान्नित्यं शान्तिकपौष्टिकम् ॥ ' इति ॥ 59 ॥
