--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/46.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/46.md
@@ -2,6 +2,9 @@
 title = "46"
 
 +++
-हैयंगवीनमिति॥ ह्यस्तनगोदोहोद्भवं घृतं हैयंगवीनम्। ह्यः पूर्वेद्युर्भवम्। 'तत्तु हैयंगवीनं यद्ध्योगोदोहोद्भवं घृतम्' इत्यमरः। 'हैयंगवीनं संज्ञायाम्' (पा.2।2।23) इति निपातः। तत्सद्योघृतम्। आदायोपस्थितान्घोषवृद्धान्। 'घोष आभीरपल्ली स्यात्' इत्यमरः। वन्यानां मार्गशाखिनां नामधेयानि पृच्छन्तौ। 'दुह्याच्-'(वा.1090,1100) इत्यादिना पृच्छतेर्द्विकर्मकत्वम्। कुलकम्॥ 45 ॥  
-काप्यभिख्या तयोरासीद्व्रजतोः शुद्धवेषयोः ।  
-हिमनिर्मुक्तयोर्योगे चित्राचन्द्रमसोरिव ॥ 46 ॥
+कापीति।  
+**व्रजतोर्** गच्छतोः **शुद्धवेषयोर्** उज्ज्वलनेपथ्ययोः तयोः सुदक्षिणादिलीपयोः।  
+**हिम-निर्मुक्तयोश् चित्राचन्द्रमसोरिव योगे** सति  
+**काप्य्** अनिर्वाच्या **ऽभिख्या** शोभा **ऽऽसीत्**। 'अभिख्या नामशोभयोः' इत्यमरः। 'आतश्चोपसर्गे' (पा.3।3।106) इत्यङ्प्रत्ययः। 
+
+चित्रा नक्षत्रविशेषः। शिशिरापगमे चैत्र्यां चित्रापूर्णचन्द्रमसोर् इवेत्यर्थः ॥ 46 ॥  
